--- a/perfil/lucia/index.html
+++ b/perfil/lucia/index.html
@@ -2,18 +2,18 @@
 <html >
 <head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.6cccd59d.css">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/entry.da50f3a8.js">
-<link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/instagram.19a562f6.svg">
-<link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/linkedin.114f9708.svg">
-<link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/mail.9da7e21b.svg">
-<link rel="prefetch" as="style" href="/_nuxt/error-404.95c28eb4.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/error-404.64b1944e.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/nuxt-link.a44c5f33.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/vue.f36acd1f.50b2d2ee.js">
-<link rel="prefetch" as="style" href="/_nuxt/error-500.e798523c.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/error-500.160ef606.js">
-<script type="module" src="/_nuxt/entry.da50f3a8.js" crossorigin></script></head>
+<link rel="stylesheet" href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/entry.6cccd59d.css">
+<link rel="modulepreload" as="script" crossorigin href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/entry.8f4f745d.js">
+<link rel="prefetch" as="image" type="image/svg+xml" href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/instagram.19a562f6.svg">
+<link rel="prefetch" as="image" type="image/svg+xml" href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/linkedin.114f9708.svg">
+<link rel="prefetch" as="image" type="image/svg+xml" href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/mail.9da7e21b.svg">
+<link rel="prefetch" as="style" href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/error-404.95c28eb4.css">
+<link rel="prefetch" as="script" crossorigin href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/error-404.51346183.js">
+<link rel="prefetch" as="script" crossorigin href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/nuxt-link.1f9ea649.js">
+<link rel="prefetch" as="script" crossorigin href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/vue.f36acd1f.a72713dd.js">
+<link rel="prefetch" as="style" href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/error-500.e798523c.css">
+<link rel="prefetch" as="script" crossorigin href="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/error-500.e4d88d91.js">
+<script type="module" src="/franchardin/kundera-ediciones-web_vue-nuxt/_nuxt/entry.8f4f745d.js" crossorigin></script></head>
 <body ><div id="__nuxt"></div><script type="application/json" id="__NUXT_DATA__" data-ssr="false">[{"_errors":1,"serverRendered":2,"data":3,"state":4},{},false,{},{}]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/franchardin/kundera-ediciones-web_vue-nuxt",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body>
 </html>
